tests/ui/cfg/cfg-accessible-3.stderr
error: `cfg(accessible(..))` cannot be used in edition 2015
  --> $DIR/cfg-accessible-3.rs:5:29
   |
LL |     assert!(cfg!(accessible(::std::boxed::Box)));
   |                             ^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

